Change cotact location standard dialog box, Fix advanced search link and overlapping alert box

--- a/app/assets/stylesheets/contacts.css.scss
+++ b/app/assets/stylesheets/contacts.css.scss
@@ -306,10 +306,16 @@ input.text.validate-date {
     min-height:35px;
     overflow:hidden;
   }
+  #locate_contact_content{
+    width:790px;
+    height:565px;
+  }
+  .mh_popup_buttons{
+    margin-right: 10px;
+  }
   #locate_contact_results_container{
     height: 275px;
     overflow-y: scroll;
-
     .locate_contact_list_head{
       border:1px solid #0379ae;
       background-color: #eaf1f6;
