--- a/app/assets/stylesheets/interactions.css.scss
+++ b/app/assets/stylesheets/interactions.css.scss
@@ -44,6 +44,13 @@ body{
     padding-right: 10px;
   }
 
+  .pop_box_overlay_container{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+  }
+
   .pop_box_container {
     z-index: 1000;
     width: 100%;
